--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,6 +25,8 @@ body {
   background: #ffffff;
   font-family: Arial, Helvetica, sans-serif;
   overflow-x: hidden;
+  height: 100vh;
+  width: 100%;
 }
 
 .bg-double {
@@ -34,8 +36,12 @@ body {
   background: url("/assets/cashback/mask-group.png");
 }
 
-.bg-cashback{
-  background: linear-gradient(87.24deg, rgba(66, 29, 104, 0.2), rgba(137, 28, 252, 0.2));
+.bg-cashback {
+  background: linear-gradient(
+    87.24deg,
+    rgba(66, 29, 104, 0.2),
+    rgba(137, 28, 252, 0.2)
+  );
 }
 
 /* .owl-item.active.center .testimonial-card{
@@ -53,4 +59,94 @@ body {
   width: 100%;
   bottom: -120px;
   left: 0;
+}
+/* card css */
+
+.card {
+  border-radius: 30px;
+}
+
+.card-inner {
+  position: relative;
+  padding-bottom: 100%;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+}
+
+.card:hover .card-inner {
+  transform: rotateY(180deg);
+}
+
+.card-front,
+.card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 30px;
+  overflow: hidden;
+}
+
+.card-back {
+  color: #fff;
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 0) 0%,
+    rgba(0, 0, 0, 0.7) 100%
+  );
+  backdrop-filter: blur(24px);
+  transform: rotateY(180deg);
+}
+/* .card {
+  perspective: 800px;
+}
+
+.card__content {
+  transform-style: preserve-3d;
+  transition: transform 1s;
+}
+
+.card:hover .card__content {
+  transform: rotateY(180deg);
+}
+
+.card__front,
+.card__back {
+  backface-visibility: hidden;
+}
+
+.card__back {
+  transform: rotateY(180deg);
+}
+.card:hover .card__back{
+  backface-visibility: visible;
+} */
+
+.card-back-1 {
+  background-image: url(../../public/assets/PlayWinAndMultiplyYourWinnings/Vertical-Banner.svg);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.card-back-2 {
+  background-image: url(../../public/assets/PlayWinAndMultiplyYourWinnings/Vertical-Banner-1.svg);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.card-back-3 {
+  background-image: url(../../public/assets/PlayWinAndMultiplyYourWinnings/Banner.svg);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.card-back-4 {
+  background-image: url(../../public/assets/PlayWinAndMultiplyYourWinnings/Vertical-Banner-2.svg);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.card-back-5 {
+  background-image: url(../../public/assets/PlayWinAndMultiplyYourWinnings/Banner-1.svg);
+  background-size: cover;
+  background-repeat: no-repeat;
 }
