--- a/src/app/components/TestimonialsCarousel.css
+++ b/src/app/components/TestimonialsCarousel.css
@@ -1,27 +1,77 @@
-.testimonial-carousel {
-  padding: 40px 20px;
-  overflow: hidden;
+/* .shadow-effect {
+  text-align: center;
+  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.1), 0 15px 12px rgba(0, 0, 0, 0.02);
+}
+#customers-testimonials .shadow-effect p {
+  font-family: inherit;
+  font-size: 17px;
+  line-height: 1.5;
+  margin: 0 0 17px 0;
+  font-weight: 300;
+}
+.testimonial-name {
+  margin: -17px auto 0;
+  display: table;
+  width: auto;
+  background: #3190e7;
+  padding: 9px 35px;
+  border-radius: 12px;
+  text-align: center;
+  color: #fff;
+  box-shadow: 0 9px 18px rgba(0, 0, 0, 0.12), 0 5px 7px rgba(0, 0, 0, 0.05);
+}
+#customers-testimonials .item {
+  text-align: center;
+  padding: 50px;
+  margin-bottom: 80px;
+  opacity: 0.2;
+  -webkit-transform: scale3d(0.8, 0.8, 1);
+  transform: scale3d(0.8, 0.8, 1);
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+#customers-testimonials .owl-item.active.center .item {
+  opacity: 1;
+  -webkit-transform: scale3d(1, 1, 1);
+  transform: scale3d(1, 1, 1);
 }
 
-.testimonial-card {
-  transition: transform 0.3s ease, box-shadow 0.3s ease, opacity 0.3s ease;
+#customers-testimonials .owl-item.active.center {
+  right: 0;
 }
 
-.owl-item.active.center .testimonial-card {
-  transform: scale(1.1);
-  z-index: 1;
-  margin-top: -5%;
-  margin-bottom: -5%;
+#customers-testimonials .owl-item.cloned.active {
+  left: 4%;
 }
 
-.owl-item .testimonial-card {
-  transform: scale(0.9);
-  /* opacity: 0.7; */
-  margin-top: 0;
-  margin-bottom: 0;
+#customers-testimonials .owl-item.active {
+  right: 4%;
 }
-@media screen and (max-width: 425px) {
-  .testimonial-card {
-    width: 211px;
-  }
+
+.testimonials .owl-carousel .owl-item img {
+  transform-style: preserve-3d;
+  max-width: 90px;
+  margin: 0 auto 17px;
+} */
+.testimonials {
+  width: 60%;
+  margin: 0 auto;
+}
+.widgets-img .owl-carousel .item {
+  opacity: 0.4;
+  transition: 0.4s ease all;
+  /* transform: scale(0.9); */
+}
+.widgets-img .owl-carousel .owl-item.active.center .item {
+  opacity: 1;
+  -webkit-transform: scale3d(1, 1, 1);
+  transform: scale3d(1, 1, 1);
+}
+.widgets-img .owl-carousel .owl-item {
+  -webkit-backface-visibility: hidden;
+  -webkit-transform: translateZ(0) scale(1, 1);
+}
+.widgets-img .owl-carousel button.owl-dot {
+  outline: none;
 }
