--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -159,3 +159,15 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
 }
+.our-img img:nth-child(9){
+  width: auto !important;
+  margin-left: 25px;
+}
+.our-img img:nth-child(8){
+  width: auto !important;
+  margin-right: 25px;
+}
+.our-img img:nth-child(7){
+  width: 140px !important;
+  margin: 0 -30px;
+}
